# aprende

./: .coveragerc  .gitignore  MANIFEST.in  README.md  README.txt  development.ini  production.ini  pyproject.toml  pytest.ini  setup.py
docs/source/: conf.py  index.rst  introduction.rst  structure.rst
learn/: tests.py
learn/static/: custom.css  theme.css
learn/templates/: 404.jinja2  layout-ori.jinja2  layout.jinja2  mytemplate-ori.jinja2  mytemplate.jinja2  single.jinja2
learn/views/: default.py
