[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "learn"
version = "0.4"
authors = [
  { name="Patricio Paez", email="pp@pp.com.mx" },
]
description = "learn"
readme = "README.txt"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyramid",
    "plaster_pastedeploy",
    "pyramid_jinja2",
    "pyramid_debugtoolbar",
    "waitress",
    "pyramid_beaker",
    "docutils",
]

[project.optional-dependencies]
tests = [
    "WebTest >= 1.3.1",  # py3 compat
    "pytest >= 3.7.4",
    "pytest-cov",
]

[project.entry-points."paste.app_factory"]
main = "learn:main"